# custom_fit_garments

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
data/example_avatar/: avatar_001.ply  avatar_002.ply  avatar_003.ply  avatar_004.ply  avatar_005.ply  avatar_006.ply  avatar_007.ply  avatar_008.ply
toolbox/: adjacency.cpp  adjacency.h  linear_solver.cpp  linear_solver.h  mesh_interpolation.cpp  mesh_interpolation.h  readGarment.cpp  readGarment.h  timer.cpp  timer.h
toolbox/clothsimulation/: bend_quadratic_forces.cpp  bend_quadratic_forces.h  cloth.cpp  cloth.h  constraint_forces.cpp  constraint_forces.h  rest_shape.cpp  rest_shape.h  seam_forces.cpp  seam_forces.h  stretch_shear_forces.cpp  stretch_shear_forces.h
toolbox/garmentcreation/: connectedSubmesh.cpp  connectedSubmesh.h  dijkstra.cpp  dijkstra.h  garment_boundaries.cpp  garment_boundaries.h  remesh.cpp  remesh.h  smooth_boundaries.cpp  smooth_boundaries.hpp
toolbox/unused/: bend_forces.cpp  bend_forces.h  garment_shape.cpp  garment_shape.h  shear_forces.cpp  shear_forces.h  stretch_forces.cpp  stretch_forces.h
